--- a/index.html
+++ b/index.html
@@ -237,9 +237,11 @@
   </template>
 
   <script src="js/util.js"></script>
+  <script src="js/user-picture.js"></script>
   <script src="js/backend.js"></script>
   <!-- <script src="js/data.js"></script> -->
   <script src="js/preview.js"></script>
+  <script src="js/scale.js"></script>
   <!-- <script src="js/picture.js"></script> -->
   <script src="js/gallery.js"></script>
   <script src="js/form.js"></script>
